reports/Linear_Systems_Solutions.log
Traceback (most recent call last):
  File "C:\Anaconda3\lib\site-packages\jupyter_cache\executors\utils.py", line 56, in single_nb_execution
    record_timing=False,
  File "C:\Anaconda3\lib\site-packages\nbclient\client.py", line 1112, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Anaconda3\lib\site-packages\nbclient\util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\Anaconda3\lib\site-packages\nbclient\util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "C:\Anaconda3\lib\asyncio\base_events.py", line 584, in run_until_complete
    return future.result()
  File "C:\Anaconda3\lib\site-packages\nbclient\client.py", line 554, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "C:\Anaconda3\lib\site-packages\nbclient\client.py", line 857, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "C:\Anaconda3\lib\site-packages\nbclient\client.py", line 760, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
H = np.array([[1,3,2,0],[-1,0,3,3],[2,2,-2,1],[0,1,1,4]])
G = np.array([[3,0,5],[1,1,-3],[2,0,1],[0,2,1]])b
H1 = np.array([[1,3],[-1,0]])
H2 = np.array([[2,0],[3,3]])
H3 = np.array([[2,2],[0,1]])
H4 = np.array([[-2,1],[1,4]])
G1 = np.array([[3,0],[1,1]])
G2 = np.array([[5],[-3]])
G3 = np.array([[2,0],[0,2]])
G4 = np.array([[1],[1]])
HG1 = H1@G1 + H2@G3
HG2 = H1@G2 + H2@G4
HG3 = H3@G1 + H4@G3
HG4 = H3@G2 + H4@G4
print(H@G,'\n')
print(HG1,'\n')
print(HG2,'\n')
print(HG3,'\n')
print(HG4)
------------------

[1;36m  File [1;32m"<ipython-input-18-7b2e27f83d3b>"[1;36m, line [1;32m2[0m
[1;33m    G = np.array([[3,0,5],[1,1,-3],[2,0,1],[0,2,1]])b[0m
[1;37m                                                    ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-18-7b2e27f83d3b>, line 2)

